--- a/index.html
+++ b/index.html
@@ -6,96 +6,85 @@
 
 </head>
 <body>
-	<img src = "img1.jpg" 
-		alt = "AselTraut">	
-	<div class = "header">
-		<div style = "padding-top:10px;width:700px; height: 160px">	
-		<div class="header-right">
-			<a href = "#Reach me at">Contact</a>
-			<a href = "#Eudcated at these awesome Universities:">About</a>
-			<br><br><br>			
-			<h1>Improve your personal code!</h1>
-		</div>
+	
+	<div class ="flex-container">
+	<div class = "firstSec" >
+		<div align = "left">
+		
+		<img src = "img1.JPG" alt = "Asel Traut">
+		
+		<h2> Asel Traut</h2>
+		<h4>Environmental chemist and Software Engineer in training</h4>
+		<h3>Reach me at </h3>
+			<ul>	
+				<li>Mobile: +27608082919  </li>
+				<li>email: aseltraut@gmail.com  </li>
+		<h3>or look me up on</h3>	
+				<li><a href = "https://www.linkedin.com/in/aseltraut/"> My LinkedIn </a></li>
+				<li><a href = "https://github.com/firefox2022"> GitHub </a></li>
+			</ul>
+			<hr>
+		<h3>Coding skills:</h3>
+			<ul> 
+				<li>Python </li>
+				<li>Java, JDBC </li>
+				<li>Object-Oriented Programming</li>
+				<li>Backend Coding </li>
+			</ul>			
 		</div>
 	</div>
-	<br><br><br><br>
-	<h2> Hello, I'm Asel </h2>
-		<p>
-				
+	<div class = "secondSec" >
+	<div class = "header">
+	<h2>About me</h2> 	
+
+	</div>
+		<div align = "justify">
+		<p>			
 		"An aspiring Software Engineer in training. Love to code and at the moment pursue a career in this 
 		newly found field for me. Have strong analytical skills, and extremely goal-oriented. Always a team player 
 		with a keen eye for detail. Besides, I am an Environmental Chemist trained and skilled at selecting 
-		appropriate data collection methods, conducting field surveys, and gathering data. Knowledgeable in trace 
+		analytical methods, conducting field surveys, and gathering data. Knowledgeable in trace 
 		inorganic contaminants analysis.
 		I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field."		
-		</p>
-	<div class="flex-container">
-		<div>
-		<div>
-			<h3>Interested in:</h3>
-			<p> 
-			Python <br>
-			Java, JDBC <br>
-			Object-Oriented Programming<br>
-			Backend Coding <br>
-			</p>
-		</div>
-		</div>
-  
-		<div>
-			<div style = "color: white; background-color: MidnightBlue; padding: 5px; border-radius: 25px">	
-			<div align = "center">
-			<h3 style = "color:white">HyperionDev "Software Engineer BootCamp":</h3>
-			<p style = "background-color:MidnightBlue;">		
-			Python: programming a stock-taking session for a warehouse using OOP and defensive programming principles <br><br>
-			Java: coding a project management system for a construction firm using OOP and refactoring <br><br>
-			Java Data Base Programming <br><br>
-			</p>
-			</div>
-			</div>
-		</div>
-  
-		<div>
-			<div>
-			<div align = "right">
-			<h3> Welcome to my GitHub</h3>
-			<a href = "https://github.com/firefox2022/PoisedPMSsql"> Poised PM </a><br>
-			<a href ="https://github.com/firefox2022/poisedProjectManagement"> Project managment program(Poised) </a><br>
+		<br><br></p>
+    <hr>
+	<h2> Welcome to my GitHub</h2>
 			<a href = "https://github.com/firefox2022/inventory"> Warehouse Inventory for Nike</a>
-			</div>
-			</div>
-		</div>
-</div>
-
-<div class="flex-container">
-
-	<div style="width:500px; height:220px; padding:5px;">
+			<p></p>
+			<a href ="https://github.com/firefox2022/poisedProjectManagement"> Project managment program(Poised) </a><br>
+			<p></p>
+			<a href = "https://github.com/firefox2022/PoisedPMSsql"> Poised PM </a><br>
+			<p></p>
+						
+	<h2> Coding experience</h2>
+	<ul>	
+		<li><h3 >May, 2022 - September, 2022</h3></li>
+		<h3 >HyperionDev "Software Engineer BootCamp"</h3>
+		<p> 3 months full immersion in coding </p>
+			<ul >			
+				<li>Python: programming a stock-taking session for a warehouse using OOP and defensive programming principles </li>
+				<li>Java: coding a project management system for a construction firm using OOP and refactoring </li>
+				<li>Java Data Base Programming </li>
+			</ul>		
+		<li><h3>August, 2005 - December, 2020</h3></li>
 	
-	<h3>Reach me at </h3>
-	<p>	
-		Mobile: +27608082919  <br>
-		email: aseltraut@gmail.com  <br>
-		Look me up on LinkedIn:<a href = "linkedin.com/in/aseltraut"> My LinkedIn </a><br>
-		</p>
+		<ul>
+			<li>Previously I did a lot of organic, petroleum, and environmental chemistry</li>								
+		</ul>
+	</ul>
+    <hr>
+		<h3> Educated at these awesome Universities:</h3>
+			<ul>
+				<li>MSc Environmental Chemistry, 2020 </li>
+				<li>University of Bayreuth</li>
+				<li>MA Chemistry, 2007 </li>
+				<li>University of Arizona</li>
+				<li>BSc Organic Chemistry, 2005 </li>
+				<li>Kazakh National University</li>
+			</ul>
+		</div>    
+	</div>	
 	</div>
-	<div style="width:500px; height: 180px; padding: 5px;">
-	<div align = "right">
-	<h3> Educated at these awesome Universities:</h3>
-		MSc Environmental Chemistry, 2020 <br>
-		University of Bayreuth<br>
-		MA Chemistry, 2007 <br>
-		University of Arizona<br>
-		BSc Organic Chemistry, 2005 <br>
-		Kazakh National University<br>
-		</p>
-	</div>    
-	</div>
-</div>	
-		
-<div class = "footer">
-<a href = "#myTitle"> Back to Top</a>	
-</div>
-
 		
 </body>
 </html>
