--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			<ul>	
 				<li>Mobile: +27608082919  </li>
 				<li>email: aseltraut@gmail.com  </li>
-		<h3>or look me up on</h3>	
+			</ul>
+		<h3>or look me up on</h3>
+			<ul>		
 				<li><a href = "https://www.linkedin.com/in/aseltraut/"> My LinkedIn </a></li>
 				<li><a href = "https://github.com/firefox2022"> GitHub </a></li>
 			</ul>
@@ -30,49 +32,8 @@
 				<li>Java, JDBC </li>
 				<li>Object-Oriented Programming</li>
 				<li>Backend Coding </li>
-			</ul>			
-		</div>
-	</div>
-	<div class = "secondSec" >
-	<div class = "header">
-	<h2>About me</h2> 	
-
-	</div>
-		<div align = "justify">
-		<p>			
-		"An aspiring Software Engineer in training. Love to code and at the moment pursue a career in this 
-		newly found field for me. Have strong analytical skills, and extremely goal-oriented. Always a team player 
-		with a keen eye for detail. Besides, I am an Environmental Chemist trained and skilled at selecting 
-		analytical methods, conducting field surveys, and gathering data. Knowledgeable in trace 
-		inorganic contaminants analysis.
-		I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field."		
-		<br><br></p>
-    <hr>
-	<h2> Welcome to my GitHub</h2>
-			<a href = "https://github.com/firefox2022/inventory"> Warehouse Inventory for Nike</a>
-			<p></p>
-			<a href ="https://github.com/firefox2022/poisedProjectManagement"> Project managment program(Poised) </a><br>
-			<p></p>
-			<a href = "https://github.com/firefox2022/PoisedPMSsql"> Poised PM </a><br>
-			<p></p>
-						
-	<h2> Coding experience</h2>
-	<ul>	
-		<li><h3 >May, 2022 - September, 2022</h3></li>
-		<h3 >HyperionDev "Software Engineer BootCamp"</h3>
-		<p> 3 months full immersion in coding </p>
-			<ul >			
-				<li>Python: programming a stock-taking session for a warehouse using OOP and defensive programming principles </li>
-				<li>Java: coding a project management system for a construction firm using OOP and refactoring </li>
-				<li>Java Data Base Programming </li>
-			</ul>		
-		<li><h3>August, 2005 - December, 2020</h3></li>
-	
-		<ul>
-			<li>Previously I did a lot of organic, petroleum, and environmental chemistry</li>								
-		</ul>
-	</ul>
-    <hr>
+			</ul>
+			<hr>
 		<h3> Educated at these awesome Universities:</h3>
 			<ul>
 				<li>MSc Environmental Chemistry, 2020 </li>
@@ -82,6 +43,56 @@
 				<li>BSc Organic Chemistry, 2005 </li>
 				<li>Kazakh National University</li>
 			</ul>
+		</div>
+	</div>
+	<div class = "secondSec" >
+	<div class = "header">
+	<h2>About me</h2> 	
+
+	</div>
+		<div align = "justify">
+		<p>			
+		"I am an aspiring Software Engineer trained to code in Python and Java. Ready to put the new skill to work and challenge 
+		myself in the new field. I am goal-oriented and agile, and love learning something new. Besides, I am also an Environmental Chemist trained and skilled at selecting 
+		analytical methods, conducting field surveys, and gathering data. I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field."		
+		<br><br></p>
+    <hr>
+					
+	<h2> Coding experience</h2>
+	<ul>	
+		<li><h3 >May, 2022 - September, 2022</h3></li>
+		<h3 >HyperionDev "Software Engineer BootCamp"</h3>
+		<p> 3 months full immersion in coding </p>
+			<ul >			
+				<li>Python: Object-Oriented Programming, classes, objects, functions, and methods  </li>
+				<li>Application of Python in Machine Learning Algorithms: Clustering and Linear Regression </li>
+				<li>Java: OOP and encapsulation, Inheritance, Object-Oriented design, and design patterns </li>
+				<li>Defensive Programming and refactoring, Java Collection Framework </li>
+				<li>Basics of SQL and JDBC </li>
+				<li>Basics of HTML and CSS </li>
+				<li>Git and Version Control </li>
+				<li>Software creation, design, and testing (Junit Eclipse) </li>
+				<li>Agile Development </li>
+			</ul>				
+		<li><h3>August, 2005 - December, 2020</h3></li>	
+		<ul>
+			<li>I did a lot of organic, petroleum, and environmental chemistry </li>								
+		</ul>
+		<h3>Welcome to my GitHub </h3>
+			<ul >
+				<h4>Capstone Projects: </h4>
+				<li>Java Capstone project: Project management program for a construction 
+				firm using OOP, defensive programming, and refactoring, with the corresponding API documentation.</li>
+				<a href = "https://github.com/firefox2022/PoisedPMSsql"> Poised PM </a><br>
+				<li>Python Capstone Project: A stock-taking session for a warehouse using OOP and defensive programming principles</li>
+				<a href = "https://github.com/firefox2022/inventory"> Warehouse Inventory for Nike</a>
+				<li>Machine Learning: K-Means Algorithm</li>
+			</ul>
+	</ul>
+    <hr>
+	<p>Now and then I write about some concepts in Software Engineering help me to understand them better. 
+	Maybe you can find something helpful for yourself. Check out my blog: 
+	<a href = "https://firefox2022.blogspot.com/">here</a></p>	
 		</div>    
 	</div>	
 	</div>
