added link to kmeans algorithm

--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
 				<li>Python Capstone Project: A stock-taking session for a warehouse using OOP and defensive programming principles</li>
 				<a href = "https://github.com/firefox2022/inventory"> Warehouse Inventory for Nike</a>
 				<li>Machine Learning: K-Means Algorithm</li>
+				<a href = "https://github.com/firefox2022/K-Means-algorithm"> K-means algorithm</a>
 			</ul>
 	</ul>
     <hr>
-	<p>Now and then I write about some concepts in Software Engineering help me to understand them better. 
+	<p>Now and then I write about some concepts in Software Engineering to break them down and improve my understanding. 
 	Maybe you can find something helpful for yourself. Check out my blog: 
 	<a href = "https://firefox2022.blogspot.com/">here</a></p>	
 		</div>    
