--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	</div>
 		<div align = "justify">
 		<p>			
-		"I am an aspiring Software Engineer trained to code in Python and Java. Ready to put the new skill to work and challenge 
+		I am an aspiring Software Engineer trained to code in Python and Java. Ready to put the new skill to work and challenge 
 		myself in the new field. I am goal-oriented and agile, and love learning something new. Besides, I am also an Environmental Chemist trained and skilled at selecting 
-		analytical methods, conducting field surveys, and gathering data. I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field."		
+		analytical methods, conducting field surveys, and gathering data. I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field.		
 		<br><br></p>
     <hr>
 					
@@ -66,12 +66,12 @@
 			<ul >			
 				<li>Python: Object-Oriented Programming, classes, objects, functions, and methods  </li>
 				<li>Application of Python in Machine Learning Algorithms: Clustering and Linear Regression </li>
-				<li>Java: OOP and encapsulation, Inheritance, Object-Oriented design, and design patterns </li>
+				<li>Java: OOP, Object-Oriented design, and design patterns </li>
 				<li>Defensive Programming and refactoring, Java Collection Framework </li>
 				<li>Basics of SQL and JDBC </li>
 				<li>Basics of HTML and CSS </li>
 				<li>Git and Version Control </li>
-				<li>Software creation, design, and testing (Junit Eclipse) </li>
+				<li>Software design, and testing (Junit Eclipse) </li>
 				<li>Agile Development </li>
 			</ul>				
 		<li><h3>August, 2005 - December, 2020</h3></li>	
