added link to hyperiondev portfolio

--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
 	</div>
 		<div align = "justify">
 		<p>			
-		I am an aspiring Software Engineer trained to code in Python and Java. Ready to put the new skill to work and challenge 
-		myself in the new field. I am goal-oriented and agile, and love learning something new. Besides, I am also an Environmental Chemist trained and skilled at selecting 
-		analytical methods, conducting field surveys, and gathering data. I am passionate about Environment Conservation and look forward to apply my knowledge and skills in this field.		
+		I am an aspiring Software Engineer trained to code in Python and Java. Goal-oriented and agile, love learning something new. 
+		Besides, I am also an Environmental Chemist trained and skilled at selecting analytical methods, conducting field surveys, 
+		and gathering and analyzing data. I am passionate about Coding and Environment Conservation and look forward to 
+		applying new skills in projects that serve Environmental Sustainability.
+		.		
 		<br><br></p>
     <hr>
 					
 	<h2> Coding experience</h2>
 	<ul>	
-		<li><h3 >May, 2022 - September, 2022</h3></li>
+		<li><h3>May, 2022 - September, 2022</h3></li>
 		<h3 >HyperionDev "Software Engineer BootCamp"</h3>
-		<p> 3 months full immersion in coding </p>
+		<p> 3 months full immersion in coding. Click <a href = "https://www.hyperiondev.com/portfolio/86351/">here</a> to see portfolio</p>
 			<ul >			
 				<li>Python: Object-Oriented Programming, classes, objects, functions, and methods  </li>
 				<li>Application of Python in Machine Learning Algorithms: Clustering and Linear Regression </li>
@@ -73,6 +75,7 @@
 				<li>Git and Version Control </li>
 				<li>Software design, and testing (Junit Eclipse) </li>
 				<li>Agile Development </li>
+				
 			</ul>				
 		<li><h3>August, 2005 - December, 2020</h3></li>	
 		<ul>
