--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 		I am an aspiring Software Engineer trained to code in Python and Java. Goal-oriented and agile, love learning something new. 
 		Besides, I am also an Environmental Chemist trained and skilled at selecting analytical methods, conducting field surveys, 
 		and gathering and analyzing data. I am passionate about Coding and Environment Conservation and look forward to 
-		applying new skills in projects that serve Environmental Sustainability.
-		.		
+		applying new skills in the projects that serve Environmental Sustainability.		
 		<br><br></p>
     <hr>
 					
