--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<h2> Coding experience</h2>
 	<ul>	
 		<li><h3>May, 2022 - September, 2022</h3></li>
-		<h3 >HyperionDev "Software Engineer BootCamp"</h3>
+		<h3>HyperionDev "Software Engineer BootCamp"</h3>
 		<p> 3 months full immersion in coding. Click <a href = "https://www.hyperiondev.com/portfolio/86351/">here</a> to see portfolio</p>
 			<ul >			
 				<li>Python: Object-Oriented Programming, classes, objects, functions, and methods  </li>
@@ -72,7 +72,7 @@
 				<li>Basics of SQL and JDBC </li>
 				<li>Basics of HTML and CSS </li>
 				<li>Git and Version Control </li>
-				<li>Software design, and testing (Junit Eclipse) </li>
+				<li>Software design and testing (Junit Eclipse) </li>
 				<li>Agile Development </li>
 				
 			</ul>				
